[project]
name = "supabase-gsc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "h2>=4.3.0",
    "httpx[http2]>=0.27.0",
    "pydantic>=2.12.5",
    "requests>=2.33.0",
    "supabase==2.10.0",
    "uvicorn>=0.42.0",
    "websockets>=13.0",
]
